Prideta pushData() funkcija, skirta ipushinti vartotojo ivesti. Limitas 256 baitu. Vienas baitas vienas simbolis

--- a/mifOS/nbproject/private/private.properties
+++ b/mifOS/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/flyer/.netbeans/6.9/build.properties
+user.properties.file=/home/neworld/.netbeans/6.9/build.properties
